plugins {
    id 'java'
}

group 'com.coffeeshop'
version '1.0-SNAPSHOT'

sourceCompatibility = 15
targetCompatibility = 15

tasks.withType(JavaCompile) {
    options.compilerArgs += ["--enable-preview"]
}

tasks.withType(Test) {
    jvmArgs += "--enable-preview"
}

repositories {
    mavenCentral()
}

dependencies {
    compile 'org.junit.jupiter:junit-jupiter:5.7.0'
}

test {
    useJUnitPlatform()
}
